--- a/.gitignore
+++ b/.gitignore
@@ -26,8 +26,6 @@ share/python-wheels/
 *.egg
 
 # PyInstaller
-#  Usually these files are written by a python script from a template
-#  before PyInstaller builds the exe, so as to inject date/other infos into it.
 *.manifest
 *.spec
 
@@ -74,7 +72,7 @@ docs/_build/
 target/
 
 # Jupyter Notebook
-.ipynb_checkpoints
+.ipynb_checkpoints/
 
 # IPython
 profile_default/
@@ -83,14 +81,7 @@ ipython_config.py
 # pyenv
 .python-version
 
-# pipenv
-#   According to pypa/pipenv#598, it is recommended to include Pipfile.lock in version control.
-#   However, in case of collaboration, if having platform-specific dependencies or dependencies
-#   with no cross-platform support, pipenv may install dependencies that don't work, or not
-#   install all needed dependencies.
-#Pipfile.lock
-
-# PEP 582; used by e.g. github.com/David-OConnor/pyflow
+# PEP 582
 __pypackages__/
 
 # Celery stuff
@@ -140,16 +131,12 @@ Thumbs.db
 # ignore installers
 *.deb
 *.deb.*
-# =========================
-# Crawling / Data outputs
-# =========================
-data/*.csv
-data/*.html
-data/*.json
-data/*.txt
 
-#  Jupyter Notebook은 허용
+# =========================
+# Crawling / Data outputs (recommended)
+# =========================
+data/*
 !data/*.ipynb
-# (선택) 샘플 노트북은 허용하고 싶으면 아래 주석 해제
-# !data/sample.ipynb
+!data/README.md
+!data/.gitkeep
 
